use camelCase file names

--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "piano-roll.js",
-  "dependencies": {
+  "devDependencies": {
     "browser-sync": "^2.24.5",
     "common-tags": "^1.8.0",
     "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
     "rollup-plugin-typescript": "^0.8.1",
     "rollup-plugin-typescript2": "^0.15.0",
-    "typescript": "^2.9.2"
-  },
-  "devDependencies": {
+    "tslint": "^5.12.1",
+    "typescript": "^2.9.2",
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
