--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
-  "files": [
-    "src/scripts/script.ts"
-  ],
-  
+  "files": ["src/scripts/script.ts"],
+
   "compilerOptions": {
     "outDir": "www/scripts",
     "target": "es6",
     "module": "esnext",
+    "lib": ["dom", "esnext"],
     "strict": true
   }
 }
