replace browser-sync with live-server (lighter)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.3",
     "common-tags": "^1.8.0",
     "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
@@ -25,5 +24,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "live-server": "github:yukulele/live-server"
+  }
 }
