--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "description": "",
   "main": "piano-roll.js",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0",
     "babel-core": "^6.26.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "common-tags": "^1.8.0",
-    "pug": "^2.0.3",
-    "pug-cli": "^1.0.0-alpha6",
-    "rollup": "^0.61.1",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-plugin-typescript2": "^0.15.0",
-    "stylus": "^0.54.5",
-    "tslint": "^5.12.1",
-    "typescript": "^2.9.2"
+    "pug": "^3.0.2",
+    "rollup": "^2.59.0",
+    "stylus": "^0.55.0",
+    "tslint": "^5.20.1",
+    "typescript": "^4.4.4",
+    "yargs": "^17.2.1"
   },
   "scripts": {
     "build": "make",
@@ -26,6 +21,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "live-server": "github:yukulele/live-server"
+    "http-server": "^14.0.0"
   }
 }
