--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /node_modules/
 /src/scripts/pianoRollTemplate.js
 /src/scripts/pianoRollTemplate.html
-/www/scripts/*
-/www/styles/*
-/public/
-!/www/**/.gitkeep
+/public/scripts/*
+/public/styles/*
+!/public/**/.gitkeep
