--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": "pianoroll",
   "version": "1.0.0",
   "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "main": "piano-roll.js",
+  "scripts": {
+    "build": "make",
+    "serve": "make serve"
+  },
+  "dependencies": {
+    "http-server": "^14.0.0"
+  },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
     "babel-core": "^6.26.3",
@@ -11,15 +21,5 @@
     "stylus": "^0.55.0",
     "typescript": "^4.4.4",
     "yargs": "^17.2.1"
-  },
-  "scripts": {
-    "build": "make",
-    "serve": "browser-sync start -c bs-config.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "http-server": "^14.0.0"
   }
 }
