--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "files": ["src/scripts/script.ts"],
 
   "compilerOptions": {
-    "outDir": "www/scripts",
+    "outDir": "public/scripts",
     "target": "es6",
     "module": "esnext",
     "lib": ["dom", "esnext"],
