--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "commander": "^8.3.0",
     "pug": "^3.0.2",
     "rollup": "^2.59.0",
     "stylus": "^0.55.0",
-    "typescript": "^4.4.4",
-    "yargs": "^17.2.1"
+    "typescript": "^4.4.4"
   }
 }
